# upkeep

./: .coverage 2  .coverage 3  .coverage 4  .coverage 5  .coverage 6  .coverage 7  .coverage 8  .gitignore  .pre-commit-config.yaml  .shellcheckrc  ANALYSIS_REPORT.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  CURRENT_FEATURES.md  EXECUTIVE_SUMMARY.md  Makefile  PHASE1_COMPLETE.md  PHASE2_5_COMPLETE.md  PHASE3_COMPLETE.md  PYTHON_DEVELOPMENT.md  README.md  ROADMAP.md  WEB_DEVELOPMENT.md  check_types.sh  example-full.txt  find_port.py  full_upgrade.txt  install-daemon.sh  maintain.sh  operation_details.json  package-lock.json  package.json  pyproject.toml  run-all-tests.sh  run-tui-as-root.sh  run-tui.sh  run-web.sh  run_tests.sh  setup-https.sh  (+5 more)
.github/workflows/: ci.yml  update-homebrew.yml
.local/: AUDIT-GATES.md  CLAUDE.md  NIMBUS.md
.local/claude/state/: current-state.md
.local/state/: upkeep-progress.json
daemon/: com.mac-maintenance.daemon.plist  com.upkeep.daemon.plist  maintenance_daemon.py  upkeep_daemon.py
docs/: CONTEXT.json  DESIGN_SYSTEM.md  DISK_SPACE_MAINTENANCE.md  ROADMAP.md  SECURITY.md  STATE.json  TEST_MATRIX.md
docs/design/: APP_UNINSTALLER.md  DISK_VIZ.md  DUPLICATE_FINDER.md  TRENDS.md
docs/research/: MENU_BAR_APP.md
docs/test-matrix/: dryish-results.json
scripts/: build-web.sh  test_matrix_dryish.py  test_matrix_real.py  watch-web.sh
src/mac_maintenance/: __init__.py  bridge.py
src/mac_maintenance/api/: __init__.py  base.py  maintenance.py  maintenance.py.bak  maintenance_insecure_backup.py  schedule.py  storage.py  system.py
src/mac_maintenance/api/models/: schedule.py
src/mac_maintenance/cli/: __init__.py  main.py
src/mac_maintenance/cli/commands/: __init__.py  storage.py  system.py
src/mac_maintenance/core/: __init__.py  exceptions.py  launchd.py  system.py  types.py
src/mac_maintenance/scripts/: __init__.py  run_schedule.py
src/mac_maintenance/storage/: cli.py
src/mac_maintenance/tui/: __init__.py  about.py  app.py  dashboard.py  maintenance.py  storage.py
src/mac_maintenance/web/: __init__.py  server.py
src/mac_maintenance/web/models/: __init__.py  common.py  maintenance.py  schedule.py  storage.py  system.py
src/mac_maintenance/web/static/: index.html
src/mac_maintenance/web/static/ts/: app.ts  types.ts
src/mac_maintenance/web/static/ts/modules/: maintenance.ts  operation-times.ts  schedule.ts  ui.ts  utils.ts
src/upkeep/: __init__.py  bridge.py
src/upkeep/api/: __init__.py  base.py  maintenance.py  schedule.py  storage.py  system.py
src/upkeep/api/models/: __init__.py  schedule.py
src/upkeep/cli/: __init__.py  main.py
src/upkeep/cli/commands/: __init__.py  storage.py  system.py
src/upkeep/core/: app_finder.py  app_uninstaller.py  disk_scanner.py  duplicate_reporter.py  duplicate_scanner.py  exceptions.py  launchd.py  system.py  trend_recorder.py  types.py
src/upkeep/scripts/: run_schedule.py
src/upkeep/storage/: __init__.py  analyzer.py  cli.py
src/upkeep/tui/: __init__.py  __main__.py  about.py  app.py  dashboard.py  maintenance.py
src/upkeep/web/: __init__.py  port_utils.py  server.py
src/upkeep/web/models/: __init__.py  common.py  maintenance.py  schedule.py  storage.py  system.py
src/upkeep/web/static/: app.js  app.js.map  index.html  test.html
src/upkeep/web/static/ts/: app.ts
src/upkeep/web/static/ts/modules/: app_uninstaller.ts  dashboard.ts  disk_viz.ts  duplicate_finder.ts  maintenance.ts  operation-times.ts  schedule.ts  storage.ts  ui.ts  utils.ts
tests/: README_TESTING.md  conftest.py  run_all_tests.sh  run_all_tests_automated.sh  setup.ts  test_app_finder.py  test_dry_run_mode.py  test_edge_cases.sh  test_helpers.sh  test_integration.sh  test_scheduled_tasks.sh  test_security.sh  test_ux.sh  test_validation.sh
tests/bash/: 06-python-bridge.bats
tests/frontend/: operation-times.test.ts
tests/python/: conftest.py
tests/python/api/: test_duplicate_api.py
tests/python/cli/: test_main.py
tests/python/core/: test_app_finder.py  test_app_uninstaller.py  test_system.py
tests/python/storage/: test_analyzer.py
tests/python/tui/: test_app.py
tests/test_api/: __init__.py  test_dashboard_api.py  test_maintenance_api.py  test_schedule_api.py  test_trends_api.py
tests/test_core/: test_disk_scanner.py  test_duplicate_reporter.py  test_duplicate_scanner.py  test_launchd.py  test_trend_recorder.py
types/: api.d.ts
